Updated icon, fixed the invisible dev link bug.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ body {
 
 h1 a {
   text-decoration: none;
-  color: white;
+  color: black;
   }
 
 nav {
